@@ -14,94 +14,142 @@
 	<modules>
 		<module>runservice</module>
 		<module>userservice</module>
+		<module>integration-tests</module>
+		<module>userservice-api</module>
+		<module>runapp-lib</module>
+		<module>metric-aggregator</module>
 	</modules>
 	<packaging>pom</packaging>
 	<name>runapp</name>
-	<properties>
 
+	<properties>
 		<java.version>17</java.version>
 		<kotlin.version>1.7.10</kotlin.version>
 
-		<!-- DOCKER -->
-		<docker.current.tag>dev</docker.current.tag>
-		<docker.image.java.options>
-			--add-opens=java.base/java.io=ALL-UNNAMED
-			--add-opens=java.base/java.math=ALL-UNNAMED
-			--add-opens=java.base/java.lang=ALL-UNNAMED
-			--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-			--add-opens=java.base/java.util=ALL-UNNAMED
-			--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
-			--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
-		</docker.image.java.options>
-		<docker.baseimage.tomcat>tomcat:9-java17</docker.baseimage.tomcat>
-		<buildVersion>dev</buildVersion>
-		<docker.maven.plugin.fabric8.version>0.37.0</docker.maven.plugin.fabric8.version>
+		<protobuf.version>3.21.12</protobuf.version>
+		<protobuf.plugin.version>0.6.1</protobuf.plugin.version>
+		<grpc.version>1.64.0</grpc.version>
+		<spring-kafka.version>3.1.2</spring-kafka.version>
+		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+		<mockito-kotlin.version>2.2.0</mockito-kotlin.version>
+		<test-containers.version>2.2.0</test-containers.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib-jdk8</artifactId>
-			<version>${kotlin.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-test</artifactId>
-			<version>${kotlin.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<!-- internal -->
+			<dependency>
+				<groupId>com.dashaasavel</groupId>
+				<artifactId>userservice-api</artifactId>
+				<version>${version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.dashaasavel</groupId>
+				<artifactId>runapp-lib</artifactId>
+				<version>${version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jetbrains.kotlin</groupId>
+				<artifactId>kotlin-stdlib-jdk8</artifactId>
+				<version>${kotlin.version}</version>
+			</dependency>
+
+			<!-- GRPC -->
+			<dependency>
+				<groupId>com.google.protobuf</groupId>
+				<artifactId>protobuf-java</artifactId>
+				<version>${protobuf.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-protobuf</artifactId>
+				<version>${grpc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-stub</artifactId>
+				<version>${grpc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-core</artifactId>
+				<version>${grpc.version}</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-netty</artifactId>
+				<version>${grpc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-util</artifactId>
+				<version>${grpc.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.annotation</groupId>
+				<artifactId>javax.annotation-api</artifactId>
+				<version>${javax.annotation-api.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>${spring-kafka.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jetbrains.kotlin</groupId>
+				<artifactId>kotlin-test</artifactId>
+				<version>${kotlin.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.nhaarman.mockitokotlin2</groupId>
+				<artifactId>mockito-kotlin</artifactId>
+				<version>${mockito-kotlin.version}</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>${docker.maven.plugin.fabric8.version}</version>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.jetbrains.kotlin</groupId>
-				<artifactId>kotlin-maven-plugin</artifactId>
-				<version>${kotlin.version}</version>
-				<executions>
-					<execution>
-						<id>compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>test-compile</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>test-compile</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<jvmTarget>1.8</jvmTarget>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>kotlin-maven-plugin</artifactId>
+					<groupId>org.jetbrains.kotlin</groupId>
+					<version>${kotlin.version}</version>
+					<executions>
+						<execution>
+							<id>compile</id>
+							<phase>process-sources</phase>
+							<goals>
+								<goal>compile</goal>
+							</goals>
+							<configuration>
+								<sourceDirs>
+									<sourceDir>${project.basedir}/src/main/java</sourceDir>
+								</sourceDirs>
+							</configuration>
+						</execution>
+						<execution>
+							<id>test-compile</id>
+							<goals>
+								<goal>test-compile</goal>
+							</goals>
+							<configuration>
+								<sourceDirs>
+									<sourceDir>${project.basedir}/src/test/java</sourceDir>
+								</sourceDirs>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 </project>
